# cupoch

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  mkdocs.yml
examples/cpp/: CMakeLists.txt  dynamic_points_experimental.cu  image.cpp  kinematics.cpp  pointcloud.cpp  registration.cpp  trial.cu  trianglemesh.cpp  voxelization.cpp
src/cupoch/: CMakeLists.txt  cupoch.h  cupoch_config.h.in  version.txt
src/cupoch/backend/: device_vector.h  host_vector.h
src/cupoch/camera/: CMakeLists.txt  pinhole_camera_intrinsic.cpp  pinhole_camera_intrinsic.h  pinhole_camera_parameters.cpp  pinhole_camera_parameters.h
src/cupoch/camera/cmake/: cupoch_cameraConfig.cmake
src/cupoch/cmake/: cupochConfig.cmake
src/cupoch/collision/: CMakeLists.txt  collision.cu  collision.h  primitives.cu  primitives.h
src/cupoch/collision/cmake/: cupoch_collisionConfig.cmake
src/cupoch/collision/tomasakeninemoeller/: tribox3.h
src/cupoch/geometry/: CMakeLists.txt  bounding_volume.cu  bounding_volume.h  boundingvolume.cu  boundingvolume.h  bruteforce_nn.h  bruteforce_nn.inl  densegrid.h  densegrid.inl  distance_test.h  distance_test.inl  distancetransform.cu  distancetransform.h  distancetransform_factory.cu  down_sample.cu  estimate_normals.cu  geometry.h  geometry2d.h  geometry3d.cu  geometry3d.h  geometry3d_utils.cu  geometry3d_utils.h  geometry_base.h  geometry_functor.h  geometry_utils.cu  geometry_utils.h  graph.cu  graph.h  graph_factory.cu  image.cu  image.h  image_factory.cu  intersection_test.h  intersection_test.inl  iss_keypoints.cu  kdtree_flann.cu  kdtree_flann.h  kdtree_flann.inl  kdtree_search_param.h  keypoint.h  (+32 more)
src/cupoch/geometry/cmake/: cupoch_geometryConfig.cmake
src/cupoch/geometry/cupoch-flann/: flann.hpp
src/cupoch/imageproc/: CMakeLists.txt  sgm.cpp  sgm.h
src/cupoch/integration/: CMakeLists.txt  integrate_functor.h  inverse_tri_table.py  marching_cubes_const.h  scalable_tsdfvolume.cu  scalable_tsdfvolume.h  tsdfvolume.h  uniform_tsdfvolume.cu  uniform_tsdfvolume.h
src/cupoch/integration/cmake/: cupoch_integrationConfig.cmake
src/cupoch/io/: CMakeLists.txt
src/cupoch/io/class_io/: ijson_convertible_io.cpp  ijson_convertible_io.h  image_io.cpp  image_io.cu  image_io.h  pointcloud_io.cpp  pointcloud_io.cu  pointcloud_io.h  trianglemesh_io.cpp  trianglemesh_io.cu  trianglemesh_io.h  voxelgrid_io.cpp  voxelgrid_io.cu  voxelgrid_io.h
src/cupoch/io/cmake/: cupoch_ioConfig.cmake
src/cupoch/io/file_format/: file_jpg.cu  file_json.cpp  file_obj.cu  file_pcd.cpp  file_pcd.cu  file_ply.cu  file_png.cu  file_stl.cu
src/cupoch/io/ros/: image_msg.cu  image_msg.h  pointcloud_msg.cu  pointcloud_msg.h
src/cupoch/kinematics/: CMakeLists.txt  kinematic_chain.cpp  kinematic_chain.h
src/cupoch/kinfu/: CMakeLists.txt  kinfu.cpp  kinfu.h
src/cupoch/knn/: CMakeLists.txt  bruteforce_nn.h  bruteforce_nn.inl  kdtree_flann.cu  kdtree_flann.h  kdtree_flann.inl  kdtree_search_param.h  lbvh_knn.cu  lbvh_knn.h  lbvh_knn.inl
src/cupoch/odometry/: CMakeLists.txt  odometry.cu  odometry.h  odometry_option.h  rgbdodometry_jacobian.cu  rgbdodometry_jacobian.h  rgbdodometry_jacobian.inl
src/cupoch/odometry/cmake/: cupoch_odometryConfig.cmake
src/cupoch/planning/: CMakeLists.txt  planner.cu  planner.h
src/cupoch/planning/cmake/: cupoch_planningConfig.cmake
src/cupoch/registration/: CMakeLists.txt  colored_icp.cu  colored_icp.h  correspondence_checker.cu  correspondence_checker.h  fast_global_registration.cu  fast_global_registration.h  feature.cu  feature.h  filterreg.cu  filterreg.h  fpfh.cu  generalized_icp.cu  generalized_icp.h  kabsch.cu  kabsch.h  lattice_utils.h  lattice_utils.inl  permutohedral.h  permutohedral.inl  registration.cu  registration.h  shot.cu  transformation_estimation.cu  transformation_estimation.h
src/cupoch/registration/cmake/: cupoch_registrationConfig.cmake
src/cupoch/utility/: CMakeLists.txt  console.cpp  console.h  device_vector.cu  device_vector.h  dl_converter.cu  dl_converter.h  eigen.cu  eigen.h  eigen.inl  eigenvalue.h  eigenvalue.inl  filesystem.cpp  filesystem.h  global_stream.cu  global_stream.h  helper.cpp  helper.h  ijson_convertible.cpp  ijson_convertible.h  pinned_allocator.h  platform.cu  platform.h  random.cpp  random.h  range.h  svd3_cuda.h  thrust_cupoch.h
src/cupoch/utility/cmake/: cupoch_utilityConfig.cmake
src/cupoch/visualization/: CMakeLists.txt
src/cupoch/visualization/shader/: geometry_renderer.cpp  geometry_renderer.h  image_shader.cu  image_shader.h  normal_shader.cu  normal_shader.h  phong_shader.cu  phong_shader.h  shader_wrapper.cpp  shader_wrapper.h  simple_black_shader.cu  simple_black_shader.h  simple_shader.cu  simple_shader.h  simple_white_shader.cu  (+5 more)
src/python/: CMakeLists.txt  LICENSE.txt  MANIFEST.in  Pipfile  README.md  make_install_pip_package.cmake  make_python_package.cmake  pyproject.toml  requirements.txt  setup.py
src/python/cupoc_pybind/: cupoc_pybind.cpp  cupoc_pybind.h
src/python/cupoch/: __init__.py
src/python/cupoch_pybind/: cupoch_pybind.cpp  cupoch_pybind.h  device_map_wrapper.cu  device_map_wrapper.h  device_vector_wrapper.cu  device_vector_wrapper.h  dl_converter.cpp  dl_converter.h  dl_converter.inl  docstring.cpp  docstring.h
src/tests/: CMakeLists.txt  main.cpp
src/tests/collision/: collision.cpp
src/tests/geometry/: distancetransform.cpp  graph.cpp  image.cpp  kdtree_flann.cpp  laserscanbuffer.cpp  lineset.cpp  occupancygrid.cpp  pointcloud.cpp  pointcloud.cu  pointcloud.h  trianglemesh.cpp  voxelgrid.cpp
src/tests/integration/: uniform_fsdfvolume.cpp
src/tests/knn/: kdtree_flann.cpp  lbvh_knn.cpp
src/tests/odometry/: odometry_tools.cpp  odometry_tools.h  rgbdodometry_jacobian_from_color_term.cpp  rgbdodometry_jacobian_from_hybrid_term.cpp
src/tests/planning/: planner.cpp
src/tests/registration/: feature.cpp  kabsch.cpp
src/tests/test_utility/: print.cpp  print.h  rand.cpp  rand.h  raw.cpp  raw.h  sort.cpp  sort.h  unit_test.cpp  unit_test.h
src/tools/: CMakeLists.txt  encode_shader.cpp
(+232 files in other folders)
