[tool.poetry]
name = "cupoch"
version = "0.2.5.0"
description = ""
authors = ["nekanat <nekanat.stock@gmail.com>"]
license = "MIT"
include = ["*.pyi"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.4"
open3d = {version = "^0.11.2", optional = true}
torch = {version = "^1.7.1", optional = true}
opencv-python = {version = "^4.4.0", optional = true}
networkx = {version = "^2.5", optional = true}
rospkg = {version = "^1.2.9", optional = true}
matplotlib = {version = "^3.3.3", optional = true}
pyrealsense2 = {version = "^2.41.0", optional = true}
depthai = {version = "^2.10.0", optional = true}

[tool.poetry.dev-dependencies]
twine = "^3.2.0"
wheel = "^0.36.2"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.7"
pybind11-stubgen = "^0.10.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
examples = ["open3d", "torch", "opencv-python", "networkx", "rospkg", "matplotlib", "pyrealsense2", "depthai"]
